# CareerLens

./: .gitignore  README.md  logger.py  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
DataEngineering/: EDA.ipynb  feature_extraction.py  preprocessing.py  transformation.py
Design/: design.md
Design/Dashboard/: code.html
Design/PlacementPrediction/: code.html
Design/Roadmap/: code.html
Design/SkillGap/: DESIGN.md  code.html
Docs/: model.md
PlacementPrediction/: hyperparamters.yaml  ml_utils.py  prediction.py  test_smote.py  train_1.py  train_2.py
PlacementPrediction/models/: logistic_regression.joblib
PlacementPrediction/results/: performance.csv
RoadmapGenerator/: config.yaml  llm_engine.py  roadmap_generate.py  system_prompt.md  web_search.py
RoadmapGenerator/tests/: generate.py  result_1.md  student_data.json
RoadmapGenerator/tests/results/: courses.json  generate.py  result_2.md  result_3.md
SkillGap/: category_gap.py  skill_gap_cal.py  technical_gap.py  total_skill_gap.py
SkillGap/DataSource/: .gitignore  category_weights.csv.dvc  domain_skill_weights.csv.dvc  domains.csv.dvc  skill_requirement.csv.dvc
SkillGap/tests/: skill_gap.py  students.csv  test_data.json
dataset/processed/: preprocessed_data.csv.dvc
dataset/raw/: data.csv.dvc
main/: courses.json  full_pipeline.py  roadmap.md  skill_gap_result.json
