[project]
name = "CareerLens"
version = "0.1.0"
description = "Student Skill Gap Analyser and Placement Prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.67.1",
    "ensure>=1.0.4",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "mlflow>=3.14.0",
    "numpy>=2.2.6",
    "ollama>=0.6.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.2.0",
]
